# RegMind-LK

./: .env.example  .gitignore  Dockerfile.ingestion  Dockerfile.mcp  README.md  claude_desktop_config.json.example  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Docs/: IMPLEMENTATION_PLAN.md  SLTDA_MCP_Server_Production_Plan.md
ingestion/config/: format_strategies.yaml  query_expansion.yaml  section_map.yaml
migrations/: 001_initial_schema.sql  002_improvements.sql  003_scaling.sql
src/sltda_mcp/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  notifications.py  qdrant_client.py
src/sltda_mcp/ingestion/: change_detector.py  chunker.py  cutover.py  downloader.py  embedder.py  format_identifier.py  pg_sync.py  pipeline.py  qdrant_upsert.py  scraper.py  validator.py
src/sltda_mcp/ingestion/extractors/: annual_report.py  base.py  checklist.py  form.py  (+8 more)
src/sltda_mcp/mcp_server/: auth.py  health.py  main.py  query_expansion.py  rag.py  rate_limiter.py  stdio.py
tests/: conftest.py
tests/integration/: test_tool_chains.py
tests/rag_eval/: ground_truth.json  run_eval.py
tests/smoke/: load_test.py  smoke_tests.py
tests/unit/: test_change_detector.py  test_chunker.py  test_config.py  test_cutover.py  test_downloader.py  test_embedder.py  test_extractors.py  test_financial_tools.py  test_format_identifier.py  test_health.py  test_investor_tools.py  test_niche_tools.py  test_pg_sync.py  test_rag.py  test_registration_tools.py  test_scraper.py  test_statistics_tools.py  test_strategy_tools.py
(+7 files in other folders)
