[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sltda-mcp"
version = "1.0.0"
description = "Sri Lanka Tourism Regulatory Intelligence MCP Server"
requires-python = ">=3.11"
dependencies = [
    # MCP
    "fastmcp==2.3.3",
    # Database
    "asyncpg==0.29.0",
    "sqlalchemy==2.0.30",
    # Vector DB
    "qdrant-client==1.9.1",
    # Gemini
    "google-generativeai==0.7.2",
    # PDF parsing
    "pdfplumber==0.11.0",
    "pytesseract==0.3.10",
    "Pillow==10.3.0",
    "tabula-py==2.9.3",
    # Web scraping
    "httpx==0.27.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.2",
    # Validation
    "pandera==0.19.3",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.1",
    # Config
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    # HTTP server (for SSE + health endpoint)
    "uvicorn==0.30.1",
    "starlette==0.37.2",
    # Observability
    "structlog==24.2.0",
    # Retry / rate limiting
    "tenacity==8.3.0",
    # Caching
    "cachetools==5.3.3",
    "redis[asyncio]==5.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.14.0",
    "httpx==0.27.0",
    "factory-boy==3.3.0",
    "pip-audit==2.7.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "smoke_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
